# give-back

./: .gitattributes  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  TODOS.md  calibration.yaml  llms.txt  pyproject.toml
.githooks/: pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/superpowers/specs/: 2026-03-28-discover-design.md  2026-03-28-status-design.md  2026-03-29-audit-fix-design.md  2026-04-10-cla-signing-enhancement-design.md  2026-04-10-discover-auto-fallback-design.md
plans/: PLAN-calibrate.md  PLAN-mypy-2-and-strict-ratchet.md
scripts/: setup-hooks.sh
skills/: SKILL.md
src/give_back/: __init__.py  __main__.py  _timeouts.py  assess.py  audit.py  audit_mine.py  auth.py  calibrate.py  cli.py  console.py  exceptions.py  github_client.py  guardrails.py  hints.py  license_eval.py  models.py  output.py  reconcile.py  scoring.py  state.py  status.py  submit.py
src/give_back/audit_fix/: __init__.py  contributing.py  fix.py  labels.py  license.py  resolver.py  templates.py
src/give_back/cli/: __init__.py  _shared.py  assess.py  audit.py  calibrate.py  check.py  conventions.py  deps.py  discover.py  prepare.py  skill.py  skip.py  sniff.py  status.py  submit.py  triage.py
src/give_back/conventions/: __init__.py  _contributing.py  branches.py  brief.py  cla.py  clone.py  commits.py  dco.py  merge_strategy.py  models.py  pr_template.py  style.py  testing.py
src/give_back/discover/: __init__.py  rank.py  search.py
src/give_back/graphql/: queries.py
src/give_back/output/: __init__.py  _shared.py  assess.py  audit.py  calibration.py  check.py  conventions.py  deps.py  discover.py  sniff.py  status.py  submit.py  triage.py
src/give_back/prepare/: __init__.py  action_plan.py  brief_writer.py  fork.py  lifecycle.py  workspace.py
src/give_back/signals/: __init__.py  _bots.py  ai_policy.py  contributing.py  ghost_closing.py  label_hygiene.py  license_gate.py  pr_merge_rate.py  staleness.py  time_to_response.py
src/give_back/skill/: SKILL.md
src/give_back/sniff/: __init__.py  assess.py  files.py  models.py
src/give_back/triage/: compete.py  fetch.py  models.py  rank.py
tests/: conftest.py  test_assess.py  test_audit.py  test_audit_mine.py  test_auth.py  test_calibrate.py  test_cli.py  test_cli_json_contract.py  test_console.py  test_github_client.py  test_guardrails.py  test_hints.py  test_hooks_smoke.sh  test_imports.py  test_license_eval.py  test_output.py  test_reconcile.py  test_scoring.py  test_state.py  test_status.py  test_status_warnings_contract.py  test_submit.py
tests/audit_fix/: test_contributing.py  test_fix.py  test_labels.py  test_license.py  test_resolver.py  test_templates.py
tests/cli/: test_assess.py  test_audit.py  test_audit_parser.py  test_calibrate.py  test_check.py  test_conventions.py  test_deps.py  test_discover.py  test_shared.py  test_skill.py  test_sniff.py  test_status.py  test_submit.py  test_triage.py
tests/conventions/: test_branches.py  test_brief.py  test_cla.py  test_commits.py  test_contributing.py  test_dco.py  test_merge_strategy.py  test_pr_template.py  test_style.py  test_testing.py
tests/discover/: test_output.py  test_rank.py  test_search.py
tests/fixtures/graphql/: all_internal_prs.json  empty_repo.json  ghost_closing_repo.json  healthy_repo.json
tests/fixtures/manifests/: go.mod  pyproject_pep621.toml  pyproject_poetry.toml
tests/prepare/: __init__.py  test_action_plan.py  test_brief_writer.py  test_fork.py  test_lifecycle.py  test_workspace.py
tests/signals/: test_ai_policy.py  test_contributing.py  test_ghost_closing.py  test_label_hygiene.py  test_license_gate.py  test_pr_merge_rate.py  test_staleness.py  test_time_to_response.py
tests/sniff/: __init__.py  test_assess.py  test_files.py
tests/triage/: test_compete.py  test_fetch.py  test_rank.py
