[project]
name = "give-back"
dynamic = ["version"]
description = "Evaluate whether an open-source project is viable for outside contributions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "click>=8.2",
    "httpx>=0.27",
    "rich>=13.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/give_back/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/give_back"]

[project.scripts]
give-back = "give_back.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
    "respx>=0.22",
]

[tool.ruff]
line-length = 120
exclude = ["src/give_back/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["give_back"]

[tool.pytest.ini_options]
testpaths = ["tests"]
