[project]
name = "give-back"
dynamic = ["version"]
description = "Evaluate whether an open-source project is viable for outside contributions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "click>=8.2",
    "httpx>=0.27",
    "rich>=13.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/give_back/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/give_back"]

[project.scripts]
give-back = "give_back.cli:cli"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
    "respx>=0.22",
    "mypy>=2.0",
]

[tool.mypy]
# Strict-mode ratchet completed 2026-05-07 (see plans/PLAN-mypy-2-and-strict-ratchet.md).
# Adopted non-strict on 2026-04-25 (24 errors fixed inline); ratcheted in four
# steps over 2026-05-07: disallow_untyped_defs, disallow_any_generics,
# warn_return_any, then `strict = true`.
python_version = "3.11"
files = ["src/"]
exclude = ["src/give_back/_version.py"]
strict = true

[tool.ruff]
line-length = 120
exclude = ["src/give_back/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["give_back"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/give_back"]
# branch = true is deliberately NOT enabled today. Line coverage is 82%;
# enabling branch would drop the number to an unknown value and make
# the initial gate noisy. Revisit once the line gate is stable.

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
